# project_builder

./: .dockerignore  .env.example  .gitignore  APP_FLOW.md  BACKEND_STRUCTURE.md  CONTRIBUTING.md  DESIGN_SYSTEM.md  DEVELOPMENT.md  FRONTEND_GUIDELINES.md  IMPLEMENTATION_PLAN.md  LESSONS.md  Makefile  PRD.md  README.md  SECURITY.md  TECH_STACK.md  agents.md  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.ts  progress.txt  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json
docs/: DEVELOPMENT.md  TECH_STACK.md
e2e/: forced-fail-repair.spec.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  test_support.rs
src-tauri/src/agent/: capability.rs  external.rs  git_ops.rs  merge.rs  mod.rs  runner.rs  team_brief.rs
src-tauri/src/commands/: agent_commands.rs  connection_commands.rs  cto_action_engine.rs  debug_commands.rs  goal_run_commands.rs  goal_run_executor.rs  goal_run_scheduler.rs  merge_commands.rs  mod.rs  piece_commands.rs  plan_commands.rs  project_commands.rs  repair_prompt.rs  runtime_commands.rs  settings_commands.rs
src-tauri/src/db/: agent_queries.rs  artifact_queries.rs  cto_queries.rs  goal_run_queries.rs  mod.rs  plan_queries.rs  queries.rs  runtime_session_queries.rs  team_brief_queries.rs
src-tauri/src/llm/: claude.rs  mod.rs  openai_compat.rs
src-tauri/src/models/: agent.rs  artifact.rs  connection.rs  cto_decision.rs  debug.rs  goal_run.rs  mod.rs  piece.rs  project.rs  runtime.rs  signoff.rs  team_brief.rs  work_plan.rs
(+70 files in other folders)
