[package]
name = "project-builder-dashboard"
version = "0.1.0"
edition = "2021"

[lib]
name = "project_builder_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["test"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-opener = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
